<?xml version="1.0"?>
<package>
  <name>kr120_with_torch</name>
  <version>0.1.0</version>
  <description>
               The kr120_with_torch package, based on the package kuka_experimental from ros-i, but with a welding torch added.
  </description>

  <maintainer email="jeroendemaeyer@live.be">Jeroen De Maeyer</maintainer>

  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
</package>
